# vm

./: CMakeLists.txt  README.md
headers/: Bytecode.h  Examples.h  common.h  exception_handler.h  parser.h  peb.h  vm.h
headers/aa/: antidump.h
headers/misc/: log.h  usage.h
headers/nt/: params.h  parser.h  peb.h  syscalls.h
src/: exception.cpp  main.cpp  parser.cpp  vm.cpp
src/aa/: antidump.cpp
src/nt/: parser.cpp  syscalls.cpp
